<resources>
    <string name="app_name">Meetings</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="send_text">Send</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean nec condimentum ante, quis mattis mi. Proin ut rhoncus libero, ac euismod neque. Ut suscipit, enim a facilisis consequat, orci lacus venenatis orci, at ultricies orci nulla sed ex. In condimentum viverra velit, eget feugiat libero imperdiet vel. Aenean pretium, lectus vitae bibendum bibendum, diam turpis convallis eros, quis tristique leo sapien at ipsum. Praesent eu odio id nulla lobortis auctor. Donec eget dolor eget nisl euismod commodo vel a lacus. Quisque ut justo vitae urna pharetra accumsan. Etiam dignissim neque iaculis mauris viverra, blandit rhoncus odio porttitor. Phasellus nibh arcu.</string>

    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="sign_in">Sign In</string>

    <string name="heading_meetings">All meetings</string>
    <string name="heading_my_meetings">My meetings</string>

    <string name="startDateLabel">Start date:</string>
    <string name="endDateLabel">End date:</string>

    <string name="button_ok">OK</string>
    <string name="button_cancel">Cancel</string>
    <string name="participant_icon">PARTICIPANT ICON</string>
    <string name="start_time_title">Start time:</string>
    <string name="end_time_title">End time:</string>
    <string name="write_your_meeting_description">Write your meeting description..</string>
    <string name="title">Title</string>
    <string name="priority">Priority</string>
    <string name="description">Description:</string>
    <string name="confirm_deletion">Confirm deletion</string>
    <string name="confirm_deletion_msg">Are you sure that you want to delete this meeting?</string>
    <string name="confirm_visiting">Confirm visiting</string>
    <string name="confirm_visiting_msg">Are you sure that you want to visit this meeting?</string>
    <string name="confirm_leaving">Confirm leaving</string>
    <string name="confirm_leaving_msg">Are you sure that you want to leave this meeting?</string>
    <string name="hint_full_name">Full name</string>
    <string name="hint_position">Position</string>
    <string name="reload_meetings">Reload meetings</string>
    <string name="notification">New meetings</string>
    <string name="update_notification_text">List of meetings is updated!</string>
    <string name="progress_loading">Loading...</string>
    <string name="network_warning_title">Warning</string>
    <string name="network_warning_message">Network is not available now. Please try again later</string>
    <string name="search">Search</string>
    <string name="text_for_search_hint">Text for search</string>
    <string name="search_Fragment_tab_title">Search</string>
    <string name="data_is_loaded_msg">Data is loaded</string>
</resources>
