<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context="com.komarov.meetings.NewMeetingActivity">

    <EditText
        android:id="@+id/field_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="5dp"
        android:gravity="start"
        android:hint="@string/title"
        android:maxLines="1" />

    <EditText
        android:id="@+id/field_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field_title"
        android:layout_marginBottom="5dp"
        android:gravity="bottom"
        android:hint="@string/write_your_meeting_description"
        android:inputType="textMultiLine"
        android:lines="5"
        android:maxLines="10"
        android:scrollHorizontally="false" />

    <LinearLayout
        android:id="@+id/priorityLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field_description"
        android:layout_marginBottom="5dp"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/prioritySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/priority" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/startDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/priorityLayout"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/startDateTimeLabel"
            style="@style/DateTimePicker.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/startDateLabel" />

        <TextView
            android:id="@+id/startDate"
            style="@style/DateTimePicker.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onChooseStartDate" />

        <TextView
            android:id="@+id/startTime"
            style="@style/DateTimePicker.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onChooseStartTime" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/endDatePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/startDatePicker"
        android:layout_gravity="center"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/endDateTimeLabel"
            style="@style/DateTimePicker.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/endDateLabel" />

        <TextView
            android:id="@+id/endDate"
            style="@style/DateTimePicker.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onChooseEndDate" />

        <TextView
            android:id="@+id/endTime"
            style="@style/DateTimePicker.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:onClick="onChooseEndTime" />

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_submit_meeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="5dp"
        android:src="@drawable/ic_navigation_check_24" />

</RelativeLayout>
